[package]
name = "hmmm"
description = "Hidden Markov Models in Rust"
readme = "README.md"
version = "0.1.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/hmmm"
repository = "https://github.com/paulkernfeld/hmmm"
edition = "2018"

[dependencies]
itertools = "0.8"
lazy_static = "1"
ndarray = "0.12"
num-traits = "0.2"
rand = "0.5"
spectral = "0.6"

[dev-dependencies]
counter = "0.4"

[profile.dev]
opt-level = 3  # Otherwise the tests run too slow

[features]
benchmark = []  # Benchmarking requires nightly
