[package]
name = "hmmm"
description = "Hidden Markov Models in Rust"
readme = "README.md"
version = "0.2.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/hmmm"
repository = "https://github.com/paulkernfeld/hmmm"
edition = "2018"

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
ndarray = "0.13.1"
num-traits = "0.2.12"
rand = "0.7.3"
spectral = "0.6.0"

serde = { version = "1.0.116", optional = true }

[dev-dependencies]
counter = "0.5.2"
serde_json = "1.0.57"

[profile.dev]
opt-level = 3  # Otherwise the tests run too slow

[features]
benchmark = []  # Benchmarking requires nightly

serde-1 = [
    "serde/derive", # enable serde_derive
    "ndarray/serde-1" # reexport serde-1 to ndarray for serialization
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
